Fix benchmark reporting on Windows Fixes #51